# chilimak

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  chilimak_dir_beacon  readme.md  script-build-all-script.ps1  script_compile_experiment.ps1
common/: Cargo.toml
common/src/: grammar.lalrpop
common/src/ast/: definition.rs  expression.rs  mod.rs  statement.rs
common/src/lexer/: logo.rs  mod.rs  token.rs
common/src/parser/: grammar.lalrpop  mod.rs
config/: kitchen-pipeline.lua  lexer-word-chars.lua  loggers-config.lua  return-codes.lua  return-codes.toml
core/00-driver/: _driver.hpp  common-includes.hpp  find-root.cpp  init-spdlog.cpp  terminate.cpp
core/01-preproc/: _preproc.hpp  load_source_from_file.cpp
coverage/: _main.cpp  _tmain.cpp
coverage/t00-driver/: tterminating.cpp
coverage/t01-preproc/: tloading.cpp
docs/: dependencies.md
experimentation/: Main.kl  kitchen-recipe.lua
generator/: _gen_main.cpp  abnf2pegtl.hpp
kitchen/: kitchen.csproj  notes.md  readme.md  script_buildrun_experiment.bat
kitchen/src/: Config.cs  PipelineStep.cs  Program.cs  SetUpNLog.cs  Terminate.cs
lexer/: lexer.csproj
lexer/src/: Config.cs  Program.cs  ReadAllSources.cs
lexer/src/classes/: FileOfTokens.cs  FileOfWords.cs  Token.cs  Word.cs
p01-pretokenizer/: p01-pretokenizer.csproj
p01-pretokenizer/src/: Program.cs
scripts/: chilimak-dependencies.cmake  dkasses-compiler-options.cmake  set-core-files.cmake  set-core-include-dirs.cmake  set-coverage-files.cmake
syntax/: dsl-abnf2pegtl.toml  kasserole.abnf  kasserole.hpp
tests/: readme.md  test_runner.rs
tests/01 basic code/: fun def main ret literal.kl  fun def main ret literal.kl.lex.ron
tests/01 basic lexing/: basic lexing.kl  basic lexing.kl.lex.json
tests/02 basic parsing/: fun def main empty.kl  fun def main empty.kl.lex.json
tests/compilation-tests/01-hello-world/: main.kl
tests/core-tests/00-driver/: _main.cpp
tokenizer/: .gitignore  tokenizer.csproj
tokenizer/src/: Config.cs
