[package]
name = "chilimak"
version = "0.1.0"
authors = ["Damian Grüner <grunerdamian@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "common",
]

[dependencies]
#common = "common"

[dev-dependencies]
common = {path = "common"}
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
ron = "0.6.4"